--- a/frontend/src/app/components/encadrant/stage-details-encadrant.component/stage-details-encadrant.component.html
+++ b/frontend/src/app/components/encadrant/stage-details-encadrant.component/stage-details-encadrant.component.html
@@ -2,6 +2,7 @@
 
 <div class="stage-details-container">
   <br><br><br><br>
+  
   <button class="btn-back" (click)="goBack()">
     <i class="bi bi-arrow-left"></i> Retour à la liste
   </button>
@@ -41,7 +42,9 @@
 
   </div>
 
-    <!-- Section Rapports -->
+
+
+<!-- Section Rapports -->
 <div class="section-container">
   <h3>Rapports déposés</h3>
 
@@ -86,24 +89,9 @@
 </button>
     </div>
 
-    <!-- Footer : actions / commentaires -->
+    <!-- Footer : commentaires -->
     <div class="rapport-footer" *ngIf="showComment[rapport.id]">
-      <ng-container *ngIf="rapport.statut === 'déposé'">
-        <textarea [(ngModel)]="rapport.commentaire" placeholder="Commentaire (optionnel)"></textarea>
-        <div class="buttons">
-          <button class="btn btn-sm btn-success"
-                  [disabled]="processingRapport"
-                  (click)="traiterRapport(rapport.id, 'accepter')">
-            Accepter
-          </button>
-          <button class="btn btn-sm btn-danger"
-                  [disabled]="processingRapport"
-                  (click)="traiterRapport(rapport.id, 'refuser')">
-            Refuser
-          </button>
-        </div>
-      </ng-container>
-
+  
       <ng-container *ngIf="rapport.statut !== 'déposé' && rapport.TraitementDocuments?.length > 0">
         <p><strong>Commentaire :</strong> {{ rapport.TraitementDocuments[0].commentaire }}</p>
       </ng-container>
@@ -112,7 +100,7 @@
 </div>
 
 
-    <!-- Section Absences -->
+<!-- Section Absences -->
 
 <div class="section-container">
   <h3>Gestion des absences</h3>
@@ -122,12 +110,13 @@
     {{ absenceError }}
   </div>
 
-  <button 
+<button 
     class="btn-action" 
     (click)="toggleAbsenceForm()"
     *ngIf="stage.statut_stage === 'En cours'">
     {{ showAbsenceForm ? 'Annuler' : 'Marquer une absence' }}
-  </button>
+</button>
+
 <div *ngIf="showAbsenceForm" class="form-container">
         <form [formGroup]="absenceForm">
           <div class="form-group">
@@ -148,7 +137,7 @@
             </button>
           </div>
         </form>
-      </div>
+</div>
 
 <br><br>
   <!-- Liste des absences -->
@@ -234,7 +223,6 @@
 
   </ng-container>
 </tbody>
-
     </table>
   </div>
 
@@ -245,7 +233,9 @@
 </div>
 
 
-  <!-- Section Évaluation -->
+
+
+<!-- Section Évaluation -->
 <div class="section-container">
   <div class="document-header">
     <h3><i class="bi bi-clipboard2-pulse"></i> Évaluation du stagiaire</h3>
@@ -327,5 +317,9 @@
   </div>
    </div>
 </div>
+
+
+
+
 
 </div>
